--- a/less/about.less
+++ b/less/about.less
@@ -1,19 +1,22 @@
 body {
 
 .about {
-@media @mobile {
-width: 100%;
-text-align: left;
-}
 @media @tablet {
 text-align: left;
 width: 50%;
 }
-width: 30%;
-margin-left: 4%;
-margin-top: 5%;
+@media @mobile {
+width: 90%;
 text-align: left;
-
+margin:auto;
+}
+width: 35%;
+margin-left: 4%;
+margin-top: 4%;
+text-align: left;
+background: rgba(34, 35, 41, 0.5);
+padding: 1%;
+border-radius: 10px;
 
 h2{
     margin-bottom: 5%;
@@ -58,7 +61,7 @@ h2{
          }
          background-color: white;
          margin-top: 7%;
-         margin-bottom: 5%;
+         margin-bottom:5%;
          margin-left: 1%;
          margin-right: 1%;
          height: 30rem;
