--- a/less/global.less
+++ b/less/global.less
@@ -22,7 +22,7 @@
   }
 
   h1 {
-      font-family: 'monoton', sans-serif;
+      font-family: @logoFont, sans-serif;
       font-size: 7rem;
       color: white;
   }
