--- a/less/team.less
+++ b/less/team.less
@@ -59,7 +59,7 @@ margin-top: 2%;
     height: 30rem;
     }
     @media @mobile{
-    width: 45%;
+    width: 90%;
     margin-top: 5%;
     }
     border: 2px solid white;
@@ -77,6 +77,9 @@ margin-top: 2%;
     }
   }
   p{
+    @media @mobile {
+    margin-bottom: -2%;
+    }
     color: black;
     text-align: center;
     font-weight: bold;
